--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,33 @@ dist.dir=dist
 dist.jar=${dist.dir}/Uas_11_HasinBP_XIIRPL3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=C:\\Users\\Asus\\Downloads\\lib\\commons-beanutils-1.8.2.jar
+file.reference.commons-beanutils-1.8.2.jar.zip=C:\\Users\\Asus\\Downloads\\lib\\commons-beanutils-1.8.2.jar.zip
+file.reference.commons-collections-3.2.1-1.0.0.jar=C:\\Users\\Asus\\Downloads\\lib\\commons-collections-3.2.1-1.0.0.jar
+file.reference.commons-collections-3.2.1-1.0.0.jar.zip=C:\\Users\\Asus\\Downloads\\lib\\commons-collections-3.2.1-1.0.0.jar.zip
+file.reference.commons-digester-1.7.jar=C:\\Users\\Asus\\Downloads\\lib\\commons-digester-1.7.jar
+file.reference.commons-digester-1.7.jar.zip=C:\\Users\\Asus\\Downloads\\lib\\commons-digester-1.7.jar.zip
+file.reference.commons-logging-1.1.2.jar=C:\\Users\\Asus\\Downloads\\lib\\commons-logging-1.1.2.jar
+file.reference.commons-logging-1.1.2.jar.zip=C:\\Users\\Asus\\Downloads\\lib\\commons-logging-1.1.2.jar.zip
+file.reference.groovy-all-2.0.1.jar=C:\\Users\\Asus\\Downloads\\lib\\groovy-all-2.0.1.jar
+file.reference.itext-2.1.7.jar.zip=C:\\Users\\Asus\\Downloads\\lib\\itext-2.1.7.jar.zip
+file.reference.jasperreports-5.6.0.jar=C:\\Users\\Asus\\Downloads\\lib\\jasperreports-5.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.commons-beanutils-1.8.2.jar.zip}:\
+    ${file.reference.commons-digester-1.7.jar.zip}:\
+    ${file.reference.commons-logging-1.1.2.jar.zip}:\
+    ${file.reference.itext-2.1.7.jar.zip}:\
+    ${file.reference.jasperreports-5.6.0.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.commons-collections-3.2.1-1.0.0.jar.zip}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1-1.0.0.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +78,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pkg11_hasinbp_xiirpl3.Main
+main.class=pkg11_Hasinbp.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
